--- a/org/3_raw_data.org
+++ b/org/3_raw_data.org
@@ -194,7 +194,7 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
   : [1] 3
   : [1] 5 3
 
-* TODO Practice: data frames
+* DONE Practice: data frames
 
 [[../img/3_practice.jpg]]
 
@@ -232,11 +232,17 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
 * Example: chick weights
 
 - The data frame ~chickwts~ is available in the automatically loaded
-  ~datasets~ package. You can check that with ~search()~.
+  ~datasets~ package. You can check that with ~search()~[fn:5].
   #+name: chickwts
   #+begin_src R :exports both :session :results output
     search()
   #+end_src
+
+  #+RESULTS: chickwts
+  :  [1] ".GlobalEnv"        "ESSR"              "package:stats"    
+  :  [4] "package:graphics"  "package:grDevices" "package:utils"    
+  :  [7] "package:datasets"  "package:methods"   "Autoloads"        
+  : [10] "package:base"
 
 - You can check the structure of ~chickwts~ with ~str~.
   #+name: str_chicktws
@@ -244,16 +250,30 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
     str(chickwts)
   #+end_src
 
+  #+RESULTS: str_chicktws
+  : 'data.frame':	71 obs. of  2 variables:
+  :  $ weight: num  179 160 136 227 217 168 108 124 143 140 ...
+  :  $ feed  : Factor w/ 6 levels "casein","horsebean",..: 2 2 2 2 2 2 2 2 2 2 ...
+
 - You can look at the first five records of the data set in two
   different ways, with the ~head~ function, or by extraction with the
   index operator[fn:4].
   #+name: head_chickwts
   #+begin_src R :exports both :session :results output
-    chickwts[1:5,]
+    chickwts[1:5, ]
   #+end_src
 
+  #+RESULTS: head_chickwts
+  :   weight      feed
+  : 1    179 horsebean
+  : 2    160 horsebean
+  : 3    136 horsebean
+  : 4    227 horsebean
+  : 5    217 horsebean
+
+  
 - You can look at the meaning and origin of this data set with the
-  ~help~ function (the help is better invoked from the R console)
+  ~help~ function (the help is better invoked from the /R console/)
   #+begin_example R
     help(chickwts)  # opens info sheet in default browser
   #+end_example
@@ -270,6 +290,12 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
     chickwts$weight # show all values of chick weights
   #+end_src
 
+  #+RESULTS: weight
+  :  [1] 179 160 136 227 217 168 108 124 143 140 309 229 181 141 260 203 148 169 213
+  : [20] 257 244 271 243 230 248 327 329 250 193 271 316 267 199 171 158 248 423 340
+  : [39] 392 339 341 226 320 295 334 322 297 318 325 257 303 315 380 153 263 242 206
+  : [58] 344 258 368 390 379 260 404 318 352 359 216 222 283 332
+
 - ~feed~ is a /categorical/ variable with six non-numeric possible
   outcomes. Since these outcomes are not naturally ordered, it is a
   /nominal/ categorical variable. The printout shows the levels in
@@ -278,6 +304,22 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
   #+begin_src R :exports both :session :results output
     chickwts$feed
   #+end_src
+
+  #+RESULTS: feed
+  #+begin_example
+   [1] horsebean horsebean horsebean horsebean horsebean horsebean horsebean
+   [8] horsebean horsebean horsebean linseed   linseed   linseed   linseed  
+  [15] linseed   linseed   linseed   linseed   linseed   linseed   linseed  
+  [22] linseed   soybean   soybean   soybean   soybean   soybean   soybean  
+  [29] soybean   soybean   soybean   soybean   soybean   soybean   soybean  
+  [36] soybean   sunflower sunflower sunflower sunflower sunflower sunflower
+  [43] sunflower sunflower sunflower sunflower sunflower sunflower meatmeal 
+  [50] meatmeal  meatmeal  meatmeal  meatmeal  meatmeal  meatmeal  meatmeal 
+  [57] meatmeal  meatmeal  meatmeal  casein    casein    casein    casein   
+  [64] casein    casein    casein    casein    casein    casein    casein   
+  [71] casein   
+  Levels: casein horsebean linseed meatmeal soybean sunflower
+  #+end_example
 
 * Univariate and multivariate data
 
@@ -301,8 +343,16 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
 - Look at the first five events and read the descriptions in the help.
   #+name: quakes
   #+begin_src R :exports both :session :results output
-    ...
+    head(x=quakes, n=5)
   #+end_src
+
+  #+RESULTS: quakes
+  :      lat   long depth mag stations
+  : 1 -20.42 181.62   562 4.8       41
+  : 2 -20.62 181.03   650 4.2       15
+  : 3 -26.00 184.10    42 5.4       43
+  : 4 -17.97 181.66   626 4.1       19
+  : 5 -20.42 181.96   649 4.0       11
 
 - The data set records spatial location data, depth in km, the
   magnitude on the Richter scale, and the number of observation
@@ -311,14 +361,20 @@ understand the fundamental concepts of statistics." (DataCamp, n.d.)
 - You can easily plot longitude and latitude of these 1,000 events:
   #+name: loc_quakes
   #+begin_src R :file ../img/quakes.png :session :results output graphics file
-    plot(x=quakes$long,y=quakes$lat,xlab="Longitude", ylab="Latitude")
+    plot(x=quakes$long,
+         y=quakes$lat,
+         xlab="Longitude",
+         ylab="Latitude")
   #+end_src
+
+  #+RESULTS: loc_quakes
+  [[file:../img/quakes.png]]
 
 * Parameter vs statistic
 
-- Statistics is concerned with understanding population features
+- /Statistics/ is concerned with understanding /population/ features
 
-- A population is a collection of individuals or entities
+- A population is a collection of individuals or entities or events
 
 - /Parameters/ are population characteristics
 
@@ -394,8 +450,28 @@ US who own cats.
 | ~nrow~       | R function to return no. of rows       |
 | ~ncol~       | R function to return no. of columns    |
 | ~dim~        | R function to return object dimensions |
+| ~head~, ~tail~ | display beginning/end of data set      |
+| ~str~        | display structure of data set          |
 
 * Footnotes
+
+[fn:5] Also interesting: the related function ~searchpath()~ which
+returns the path searched by R to find packages
+#+begin_src R
+  searchpaths()
+#+end_src
+
+#+RESULTS:
+| .GlobalEnv                                   |
+| C:/Program Files/R/R-4.1.2/library/stats     |
+| C:/Program Files/R/R-4.1.2/library/graphics  |
+| C:/Program Files/R/R-4.1.2/library/grDevices |
+| C:/Program Files/R/R-4.1.2/library/utils     |
+| C:/Program Files/R/R-4.1.2/library/datasets  |
+| C:/Program Files/R/R-4.1.2/library/methods   |
+| Autoloads                                    |
+| C:/PROGRA~1/R/R-41~1.2/library/base          |
+ 
 
 [fn:4]The ~head~ function prints 6 rows by default. To print only 5
 rows, you need to restrict its range with ~head(x=chickwts,n=5)~
